--- a/.luarc.json
+++ b/.luarc.json
@@ -1,9 +1,3 @@
 {
-    "diagnostics.globals": [
-        "vim",
-        "it",
-        "describe",
-        "before_each",
-        "after_each"
-    ]
+  "diagnostics.globals": ["vim", "it", "describe", "before_each", "after_each"]
 }
